<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relative_ly_main"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hacking the time"
        android:id="@+id/textViewTitle" />

    <RadioGroup
        android:id="@+id/radioGroupActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <RadioButton android:id="@+id/radioBtnWealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_wealth_generator"
            />

        <RadioButton android:id="@+id/radioBtnStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_study"
            />

        <RadioButton android:id="@+id/radioBtnExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_exercise"
            />

        <RadioButton android:id="@+id/radioBtnTakeCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_take_care_Of_mySelf"
            />

        <RadioButton android:id="@+id/radioBtnResp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_responsibilities"
            />

        <RadioButton android:id="@+id/radioBtnCulture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_culture"
            />

        <RadioButton android:id="@+id/radioBtnRelax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_time_to_relax"
            />

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/radioGroupActivities"
        android:hint="Task Description"
        android:visibility="gone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resume"
        android:id="@+id/btnResume"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
